--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boceto Web</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/estilo.css">
+    
 </head>
 <body>
     
@@ -53,12 +55,12 @@
             <div class="col-lg-6">
 
               <div class="card text-bg-dark">
-                <img src="https://picsum.photos/g/1000/700?random" class="card-img" alt="...">
-                <div class="card-img-overlay d-flex flex-column">
+                <img src="https://picsum.photos/1000/700?random" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column mascara">
                   <div class="mt-auto">
-                    <h1 class="card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <button class="btn btn-primary btn-lg" type="button">Example button</button>
+                    <h1 class="card-title sombra">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+                    <p class="card-text sombra">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <button class="btn btn-primary btn-lg" type="button">Ver</button>
                   </div>
                 </div>
               </div>
@@ -66,36 +68,36 @@
             </div>
             <div class="col-lg-3">
               <div class="card text-bg-dark mb-3">
-                <img src="https://picsum.photos/g/400/380?random" class="card-img" alt="...">
-                <div class="card-img-overlay d-flex flex-column">
+                <img src="https://picsum.photos/400/280?random" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column mascara">
                   <div class="mt-auto">
-                    <h2 class="card-title">Card title 1</h2>
+                    <h2 class="card-title sombra">Card title 1</h2>
                   </div>
                 </div>
               </div>
               <div class="card text-bg-dark">
-                <img src="https://picsum.photos/g/400/381?random" class="card-img" alt="...">
-                <div class="card-img-overlay d-flex flex-column">
+                <img src="https://picsum.photos/400/281?random" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column mascara">
                   <div class="mt-auto">
-                    <h2 class="card-title">Card title 1</h2>
+                    <h2 class="card-title sombra">Card title 1</h2>
                   </div>
                 </div>
               </div>               
             </div>            
             <div class="col-lg-3">
               <div class="card text-bg-dark mb-3">
-                <img src="https://picsum.photos/g/402/402?random" class="card-img" alt="...">
-                <div class="card-img-overlay d-flex flex-column">
+                <img src="https://picsum.photos/401/280?random" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column mascara">
                   <div class="mt-auto">
-                    <h2 class="card-title">Card title 1</h2>
+                    <h2 class="card-title sombra">Card title 1</h2>
                   </div>
                 </div>
               </div>
               <div class="card text-bg-dark">
-                <img src="https://picsum.photos/g/403/403?random" class="card-img" alt="...">
-                <div class="card-img-overlay d-flex flex-column">
+                <img src="https://picsum.photos/401/281?random" class="card-img" alt="...">
+                <div class="card-img-overlay d-flex flex-column mascara">
                   <div class="mt-auto">
-                    <h2 class="card-title">Card title 1</h2>
+                    <h2 class="card-title sombra">Card title 1</h2>
                   </div>
                 </div>
               </div> 
