--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
               <div class="card text-bg-dark">
                 <img src="https://picsum.photos/g/1000/1000?random" class="card-img" alt="...">
-                <div class="card-img-overlay d-flex flex-column">
+                <div class="card-img-overlay d-flex flex-column" style="background-color: rgba(0,0,0,0.7);">
                   <div class="mt-auto">
                     <h1 class="card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -137,6 +137,8 @@
 
     </div>
 
+    <!-- Video -->
+
     <div class="bg-dark m-5">
 
       <div class="container">
@@ -159,6 +161,7 @@
 
     </div>
 
+        <!-- titulos secundarios -->
 
     <div class="container">
 
