--- a/test-jquery.html
+++ b/test-jquery.html
@@ -6,6 +6,7 @@
     <title>Demo</title>
     <script src="js/jquery.js"></script>
 
+    <script>
 $.ajax({
     url: "https://api.themoviedb.org/3/person/190?api_key=45082c7b0f792bc71f372fbce1b42c61&language=es",
     //force to handle it as text
@@ -23,7 +24,7 @@ $.ajax({
         }
     }
 });
-
+</script>
 </head>
 <body>
     <div id="resultados"></div>
