--- a/test-jquery.html
+++ b/test-jquery.html
@@ -3,31 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
+    <title>Api con Jquery</title>
     <script src="js/jquery.js"></script>
 
     <script>
-$.ajax({
-    url: "https://api.themoviedb.org/3/person/190?api_key=45082c7b0f792bc71f372fbce1b42c61&language=es",
-    //force to handle it as text
-    dataType: "text",
-    success: function(data) {
 
-        //data downloaded so we call parseJSON function 
-        //and pass downloaded data
-        var json = $.parseJSON(data);
-        //now json variable contains data in json format
-        //let's display a few items
-        for (var i=0;i<json.length;++i)
-        {
-            $('#results').append('<div class="name">'+json[i].name+'</>');
-        }
-    }
-});
+    $.getJSON('https://api.themoviedb.org/3/person/190?api_key=45082c7b0f792bc71f372fbce1b42c61&language=es', function(data) {
+        
+        var text = `Date: ${data.name}<br>
+                    Time: ${data.biography}<br>`
+        $(".resultados").html(text);
+    });
+
 </script>
 </head>
 <body>
-    <div id="resultados"></div>
+    <div class="resultados"></div>
     
 </body>
 </html>
