--- a/consulta-actor.html
+++ b/consulta-actor.html
@@ -45,6 +45,11 @@
         
     });
 
+      if (actorId='') {
+          var los_datos = 'No hay información que mostrar'
+          $(".resultados").html(los_datos);          
+      }
+
 </script>
 </head>
 <body>
