--- a/consulta-actor.html
+++ b/consulta-actor.html
@@ -45,7 +45,8 @@
         
     });
 
-      if (actorId='') {
+      if (actorId==='') {
+          console.log("El dato del actor está vacío");
           var los_datos = 'No hay información que mostrar'
           $(".resultados").html(los_datos);          
       }
