--- a/consulta-actor.html
+++ b/consulta-actor.html
@@ -35,7 +35,7 @@
   const apiKey = '45082c7b0f792bc71f372fbce1b42c61';
   const url = `https://api.themoviedb.org/3/person/${actorId}?api_key=${apiKey}&language=es-ES`;
 
-  if (actorId===null) {
+  if (actorId===null actorId.length === 0) {
           console.log("El dato del actor está vacío");
           var los_datos = 'No hay información que mostrar'
           $(".resultados").html(los_datos);          
